--- a/html/templates/includes/layout-footer.html
+++ b/html/templates/includes/layout-footer.html
@@ -60,7 +60,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <img src="/static/img/logo-en.png" style="width: 275px;" />
+                    <img src="/static/img/logo_sup.png" /><span class="logo-services">SERVICES</span>
                 </a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
