--- a/html/templates/email/contact-us.html
+++ b/html/templates/email/contact-us.html
@@ -8,11 +8,9 @@
 <body>
 
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
-     <a href="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/">
-        <!--<img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo-en.png" width="200px">-->
-        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png" width="70px" />
-        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_bottom.png" width="170px" />
-    </a>
+    <a href="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/" style="text-decoration: none;">
+        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png" width="50" style="display: block;float: left;"/><span style="text-decoration: none; display: block;margin-top: 12px;font-size: 24px;font-weight: bold;color: #3C3E77;font-family: sans-serif;">SERVICES</span>
+    </a><br>
     <div style="background: #eee; padding: 10px 20px 20px 20px;">
         {{ email_body|safe }}
     </div>
