--- a/html/templates/includes/layout-footer.html
+++ b/html/templates/includes/layout-footer.html
@@ -177,7 +177,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; Vendedor Online 2017" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2018" %}</span>
                 </div>
                 <div class="col-md-3">
 
