--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -468,12 +468,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; PrepShip Tool 2017" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2018" %}</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3"><!--
                    <a href="https://prepshiptool.com" target="_blank" class="by download">
                         <img src="../../static/img/logo-en-maior.png" width="20px"/> by {% trans "PrepShip Tool" %}
-                   </a>
+                   </a>-->
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
