Ajuste label "redirecionamento gr'atis"

--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -69,7 +69,7 @@
                   </div>
 {% endcomment %}
                   <div class="col-md-12">
-                      <p><strong>{% trans "Redirecionamento" %}:</strong><br> U$ {{ product.redirect_factor|localize }}</p>
+                      <p><strong>{% trans "Redirecionamento" %}:</strong><br> Grátis</p>
                   </div>
                   <div class="col-md-12">
                       <p><strong>{% trans "Custo de Envio para Amazon" %}:</strong><br> U$ {{ product.shipping_cost|localize }}</p>
