--- a/html/templates/email/forgot-password.html
+++ b/html/templates/email/forgot-password.html
@@ -9,8 +9,8 @@
 
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
     <a href="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/" style="text-decoration: none;">
-        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png" width="50" style="display: block;float: left;"/><span style="text-decoration: none; display: block;margin-top: 12px;font-size: 24px;font-weight: bold;color: #3C3E77;font-family: sans-serif;">SERVICES</span>
-    </a><br>
+        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png" width="50" />
+    </a>
     <div style="background: #eee; padding: 10px 20px 20px 20px;">
         <p style="color:#858585;font:15px/120% 'Helvetica'">{% trans "Prezado(a)" %} {{ user_name }}</p>
         <p style="color:#858585;font:15px/120% 'Helvetica'">{% trans "Clique no botão abaixo para cadastrar sua nova senha." %}</p>
