--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -6,21 +6,83 @@
 
     <div class="container-fluid">
       <div class="row">
-
+        <div class="box-aasine-agora">
+            <span>Assine Agora</span> <a href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-credit-card"></i></a>
+        </div>
         <div class="col-md-1 sidebar">
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-leanpub"></i> Veja abaixo como nossa plataforma funciona</h1>
+          <h1 class="page-header center">Chega de sofrer para achar, comprar e enviar seus produtos, Vendedor Amazon!</h1>
           <div class="row">
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-8">
-                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/fyaI4-5849w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-12">
+              <iframe width="100%" height="415" src="https://www.youtube.com/embed/fyaI4-5849w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+           <br /><br /><br /><br /><br /><br />
+              <div class="col-md-12 box-comparativo">
+                <h3 class="page-header">Veja abaixo um comparativo com os demais serviços oferecidos</h3>
+                  <label>Considerando uma compra no valor de $500,00 USD em produtos sendo 25 itens.</label>
+                <div class="table-responsive">
+            <br>
+
+            <table class="table table-striped table-bordered">
+              <thead>
+                <tr>
+                  <th>
+
+                      <i class="fa fa-fw fa-credit-card"></i> Taxas
+                  </th>
+                  <th class="center">
+                      Meios tradicionais
+                  </th>
+                  <th class="center">
+
+                      VOI Services
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+
+                <tr>
+              		<td>IOF Produtos</td>
+              		<td class="center">6% - $30,00</td>
+              		<td class="center">6% - $30,00</td>
+                </tr>
+                <tr>
+              		<td>Redirecionamento</td>
+              		<td class="center">$1,29/item - $32,25</td>
+              		<td class="center">Grátis - $0,00</td>
+                </tr>
+                 <tr>
+              		<td>IOF pagamento do Redirecionamento</td>
+              		<td class="center">6% - $1,94</td>
+              		<td class="center">Grátis - $0,00</td>
+                </tr>
+                 <tr>
+              		<td>Compra assistida</td>
+              		<td class="center">5% - $25,00</td>
+              		<td class="center">0% - $0,00</td>
+                </tr>
+                 <tr>
+              		<td>Sales TAX</td>
+              		<td class="center">7% - $35,00</td>
+              		<td class="center">0% - $0,00</td>
+                </tr>
+                 <tr>
+              		<td>Valor Total Gasto com taxas</td>
+                     <td class="center"><strong>$129,19</strong></td>
+                     <td class="center"><strong>$30,00</strong></td>
+                </tr>
+                 <tr>
+              		<td>Tempo desde a compra até o produto chegar na Amazon</td>
+                     <td class="center"><strong>Em média 10 dias</strong></td>
+                     <td class="center"><strong>Em média 2 dias</strong></td>
+                </tr>
+              </tbody>
+            </table>
+            <p>Torne-se um assinante VOI Services e desfrute das inúmeras vantagens que o nosso serviço oferece.</p>
+            <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Seja Assinante</a><br><br>
+          </div>
+        </div>
+              <div class="col-md-12"><br /><br /><br />
                 <h3 class="page-header">Abaixo um passo-a-passo desde a compra dos lotes até enviá-los para Amazon</h3>
                 <ul class="timeline">
                     <li>
@@ -30,10 +92,10 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <br><br>
-                                <h4 class="subheading">Primeiro, cadastre-se.</h4>
+                                <h4 class="subheading">Primeiro, cadastre-se e torne-se assinante.</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted"><a href="/pt/usuario/cadastro/" class="download">Clique aqui</a> e cadastre-se. Simples e muito rápido. não se esqueça de marcar a opção para se tornar assinante.</p>
+                                <p class="text-muted"><a href="/pt/usuario/cadastro/" class="download">Clique aqui</a>, cadastre-se e por apenas $54,90/mês assine nosso serviço. Simples e muito rápido. não se esqueça de marcar a opção para se tornar assinante no cadastro.</p>
                             </div>
                         </div>
                     </li>
@@ -55,12 +117,12 @@
                             <img class="img-circle img-responsive" src="../../static/img/about/4.jpeg" alt="Produto vendido">
                         </div>
                         <div class="timeline-panel">
-                            <div class="timeline-heading"><br><br>
-                                <h4 class="subheading">Envio par Amazon</h4>
+                            <div class="timeline-heading">
+                                <h4 class="subheading">Envio para Amazon (É GRÁTIS)</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
-                                    Depois de receber a notificação de que seus itens estão disponíveis no seu estoque VOI (Isso ocorre imediatamente após a compra do lote), basta criar seu envio para a Amazon. <a href="/pt/ajuda" class="download">Veja como.</a></p>
+                                    Depois de receber a notificação de que seus itens estão disponíveis no seu estoque VOIServices (Isso ocorre imediatamente após a compra do lote), basta criar seu envio para a Amazon. <a href="/pt/ajuda" class="download">Veja como.</a> <br>O mais incrível: <strong>É GRÁTIS!!!</strong></p>
                             </div>
                         </div>
                     </li>
@@ -69,7 +131,7 @@
                             <h4><br>Envio<br> Concluido</h4>
                         </div>
                         <div class="timeline-panel">
-                            <div class="timeline-heading">
+                            <div class="timeline-heading"><br>
                                 <h4 class="subheading">Envio Concluido</h4>
                             </div>
                             <div class="timeline-body">
