--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -43,7 +43,7 @@
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                     <img src="/static/img/logo_sup.png" /><span class="logo-services">SERVICES</span>
+                     <img src="/static/img/logo_sup.png" />
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
