--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -49,6 +49,9 @@
                       <p class="nome"><strong>{% trans "Nome" %}:</strong><br> {{ product.name }}</p>
                   </div>
                   <div class="col-md-12">
+                      <p><strong>{% trans "Rank" %}:</strong>  1%</p>
+                  </div>
+                  <div class="col-md-12">
                       <p><strong>{% trans "UPC / CODIGO IDENTIFICADOR" %}:</strong><br> {{ product.identifier }}</p>
                   </div>
                   <div class="col-md-6">
