--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -6,8 +6,8 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="box-aasine-agora">
-            <span>Assine Agora</span> <a href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-credit-card"></i></a>
+        <div class="box-assine-agora">
+            <span>Assine Agora</span> <a href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-hand-pointer-o fa-2x"></i></a>
         </div>
         <div class="col-md-1 sidebar">
 
