Novo site prepshiptool

--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -72,7 +72,7 @@
                      <td class="center"><strong>$30,00</strong></td>
                 </tr>
                  <tr>
-              		<td>Tempo desde a compra até o produto chegar na Amazon</td>
+              		<td>Tempo desde a compra até o produto ser enviado para Amazon</td>
                      <td class="center"><strong>Em média 10 dias</strong></td>
                      <td class="center"><strong>Em média 2 dias</strong></td>
                 </tr>
