--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -6,9 +6,6 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="box-assine-agora">
-            <span>Assine Agora</span> <a href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-hand-pointer-o fa-2x"></i></a>
-        </div>
         <div class="col-md-1 sidebar">
 
         </div>
@@ -17,7 +14,7 @@
           <div class="row">
               <iframe width="100%" height="415" src="https://www.youtube.com/embed/fyaI4-5849w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
            <br /><br /><br /><br /><br /><br />
-              <div class="col-md-12 box-comparativo">
+           <div class="col-md-12 box-comparativo">
                 <h3 class="page-header">Veja abaixo um comparativo com os demais serviços oferecidos</h3>
                   <label>Considerando uma compra no valor de $500,00 USD em produtos sendo 25 itens.</label>
                 <div class="table-responsive">
@@ -82,65 +79,78 @@
             <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Seja Assinante</a><br><br>
           </div>
         </div>
-              <div class="col-md-12"><br /><br /><br />
-                <h3 class="page-header">Abaixo um passo-a-passo desde a compra dos lotes até enviá-los para Amazon</h3>
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image">
-                            <img alt="Cadsatre-se" class="img-circle img-responsive" src="../../static/img/about/1.jpeg" alt="">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="box-comparativo">
+                    <div class="box-valor">
+                        <p class="seja">Valor Assinatura</p>
+                        <p class="assinate-span"><span>U$54,90</span>/mês</p>
+                        <ul>
+                            <li><i class="fa fa-fw fa-check"></i> Redirecionamento Grátis</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12"><br /><br /><br />
+            <h3 class="page-header">Abaixo um passo-a-passo de como funciona nosso serviço</h3>
+            <ul class="timeline">
+                <li>
+                    <div class="timeline-image">
+                        <img alt="Cadsatre-se" class="img-circle img-responsive" src="../../static/img/about/1.jpeg" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <br><br>
+                            <h4 class="subheading">Primeiro, cadastre-se e torne-se assinante.</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <br><br>
-                                <h4 class="subheading">Primeiro, cadastre-se e torne-se assinante.</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted"><a href="/pt/usuario/cadastro/" class="download">Clique aqui</a>, cadastre-se e por apenas $54,90/mês assine nosso serviço. Simples e muito rápido. não se esqueça de marcar a opção para se tornar assinante no cadastro.</p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted"><a href="/pt/usuario/cadastro/" class="download">Clique aqui</a>, cadastre-se e por apenas $54,90/mês assine nosso serviço. Simples e muito rápido. não se esqueça de marcar a opção para se tornar assinante no cadastro.</p>
                         </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img alt="Insira seus produtos" class="img-circle img-responsive" src="../../static/img/about/2.jpeg" alt="">
+                    </div>
+                </li>
+                <li class="timeline-inverted">
+                    <div class="timeline-image">
+                        <img alt="Insira seus produtos" class="img-circle img-responsive" src="../../static/img/about/2.jpeg" alt="">
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="subheading">Compre quantos lotes quiser com poucos cliques</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Compre quantos lotes quiser com poucos cliques</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Após se tornar um assinante da nossa plataforma, você terá acesso a todos os nossos lotes. Basta escolher quais você quer e com poucos cliques os seus produtos já estarão disponíveis para serem enviados para a Amazon.</p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">Após se tornar um assinante da nossa plataforma, você terá acesso a todos os nossos lotes. Basta escolher quais você quer e com poucos cliques os seus produtos já estarão disponíveis para serem enviados para a Amazon.</p>
                         </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="../../static/img/about/4.jpeg" alt="Produto vendido">
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-image">
+                        <img class="img-circle img-responsive" src="../../static/img/about/4.jpeg" alt="Produto vendido">
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="subheading">Envio para Amazon (É GRÁTIS)</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Envio para Amazon (É GRÁTIS)</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">
-                                    Depois de receber a notificação de que seus itens estão disponíveis no seu estoque VOIServices (Isso ocorre imediatamente após a compra do lote), basta criar seu envio para a Amazon. <a href="/pt/ajuda" class="download">Veja como.</a> <br>O mais incrível: <strong>É GRÁTIS!!!</strong></p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                Depois de receber a notificação de que seus itens estão disponíveis no seu estoque VOIServices (Isso ocorre imediatamente após a compra do lote), basta criar seu envio para a Amazon. <a href="/pt/ajuda" class="download">Veja como.</a> <br>O mais incrível: <strong>É GRÁTIS!!!</strong></p>
                         </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4><br>Envio<br> Concluido</h4>
+                    </div>
+                </li>
+                <li class="timeline-inverted">
+                    <div class="timeline-image">
+                        <h4><br>Envio<br> Concluido</h4>
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading"><br>
+                            <h4 class="subheading">Envio Concluido</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading"><br>
-                                <h4 class="subheading">Envio Concluido</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Você pode gerenciar todo o processo em nosso sistema. É rápido, fácil e extremamente seguro.</p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">Você pode gerenciar todo o processo em nosso sistema. É rápido, fácil e extremamente seguro.</p>
                         </div>
-                    </li>
-                </ul>
-          </div>
+                    </div>
+                </li>
+            </ul>
+      </div>
         </div>
       </div>
     </div>
