--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -265,6 +265,13 @@
 
     {% block conteudo %}Conteudo pagina{% endblock %}
 
+
+    <!-- Btn para usuario se tornar assinante. So quem nao e assinante pode visualizar esse bloco-->
+    <div class="box-assine-agora">
+        <span>Assine Agora</span> <a href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-hand-pointer-o fa-2x"></i></a>
+    </div>
+    <!-- Fim bloco -->
+
     <footer>
         <div class="container">
             <div class="row">
