--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -8,8 +8,8 @@
             <h2><i class="fa fa-ban"></i><span class="text-gg">{% trans "Chega" %}</span> {% trans "de problemas para encontrar produtos" %}</h2>
             <h2><i class="fa fa-credit-card"></i><span class="text-gg">{% trans "Chega" %}</span> {% trans "de problemas para pagar com seu cartão de crédito do Brasil" %}</h2>
             <h2><img src="/static/img/sale-img.png" width="100%" /> </h2>
+            <h2><i class="fa fa-motorcycle"></i><span class="text-gg">Agora</span>Você não paga mais redirecionamento. <strong>Com a gente é grátis</strong></h2>
             <h2><i class="fa fa-line-chart"></i><span class="text-gg">{% trans "Agora" %}</span> {% trans "preocupe-se apenas com o crescimento do seu negócio. Nós pensamos tudo pra você" %}</h2>
-            <h2><i class="fa fa-amazon"></i><span class="text-gg">{% trans "Agora" %}</span> {% trans "com poucos cliques seus produtos já estarão no seu inventário Amazon" %}</h2>
         </div>
     </div>
     <div class="container-fluid">
