--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -61,12 +61,21 @@
         <div class="row">
             <div class="col-md-1">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 box-cad-esquerda">
                 <img src="/static/img/imagem-cadastro.png" width="100%" />
                 <br><br><br>
+                <div class="box-valor">
+                    <p class="seja">Seja Assinante por apenas</p>
+                    <p class="assinate-span"><span>U$54,90</span>/mês</p>
+                    <small>e tenha acesso a todas as vantagens de ser um assinante VOI Services</small>
+                </div>
+                <br><br>
                 <label> {% trans "Leia <a href='/pt/termos-e-condicoes-de-uso.html' class='download'>aqui</a> nossos termos e condições de uso da plataforma." %}</label>
                 <br /><br><br>
                 <label> {% trans "Se ainda tiver dúvidas, veja nossos tutorias de utilização da plataforma <a href='/pt/ajuda/' class='download'>aqui</a>." %}</label>
+            <br /><br><br>
+                <label> {% trans "Veja aqui as vantagens de se tornar um assinante <a href='/pt/como-funciona/' class='download'>Clique aqui</a>." %}</label>
+
             </div>
             <div class="col-md-6">
                 <form action="" method="post" class="form-cad-cliente" id="form-add-user">
