--- a/html/templates/terms.html
+++ b/html/templates/terms.html
@@ -13,7 +13,7 @@
                     <div>
                         <p>
                             Caros usu&aacute;rios,<br /><br />
-                            Os termos abaixo tem por finalidade esclarecer nossas pol&iacute;ticas e ajudar os nossos usu&aacute;rios a compreenderem as condi&ccedil;&otilde;es gerais de uso da nossa plataforma, bom como os direitos e obriga&ccedil;&otilde;es de ambas as partes.</p>
+                            Os termos abaixo tem por finalidade esclarecer nossas pol&iacute;ticas e ajudar os nossos usu&aacute;rios a compreenderem as condi&ccedil;&otilde;es gerais de uso da nossa plataforma, bem como os direitos e obriga&ccedil;&otilde;es de ambas as partes.</p>
 
                         <p>
                             Estes Termos e condi&ccedil;&otilde;es gerais aplicam-se ao uso dos servi&ccedil;os oferecidos pelo VOI Services.</p>
@@ -26,7 +26,7 @@
                         <p>
                             <strong>1- Objeto</strong></p>
                         <p>
-                            O servi&ccedil;o objeto dos presentes Termos e condi&ccedil;&otilde;es gerais consistem em (i) Venda de produtos na forma de lotes para usu&aacute;rios devidamente cadastrados e que seja assinate do nosso serviço. </p>
+                            O servi&ccedil;o objeto dos presentes Termos e condi&ccedil;&otilde;es gerais consistem em (i) Venda de produtos na forma de lotes para usu&aacute;rios devidamente cadastrados e que seja assinante do nosso serviço. </p>
                         <p>
                             &nbsp;</p>
                         <p>
@@ -50,7 +50,7 @@
                         <p>
                             <strong>4- Assinatura</strong></p>
                         <p>Somente usuários cadastrados e que optem pela assinatura podem utilizar as funcionalidades oferecidas pelo VOI Services. Os usuários que optem por serem assinantes devem realizar solicitação através do seu cadastro marcando a opção designada. O usuário terá seu status alterado para assinante após o pagamento da primeira mensalidade e autorizado pelo VOI Services.</p>
-                        <p>O usuário assinante pode solicitar o cancelamento de sua assinatura a qualquer tempo. Para isso, o mesmo deve enviar solicitação de cancelamento através de email oficial de atendimento. O usuário que solicitar cancelamento deverá efetuar o pagamento dos dias relativos ao mês em curso.</p>
+                        <p>O usuário assinante pode solicitar o cancelamento de sua assinatura a qualquer tempo. Para isso, o mesmo deve enviar solicitação de cancelamento através de email oficial de atendimento support@voiservices.com. O usuário que solicitar cancelamento deverá efetuar o pagamento dos dias relativos ao mês em curso.</p>
                         <p>O valor da assinatura é de $54,90 USD por mês</p>
                         <p>&nbsp;</p>
                         <p>
@@ -64,9 +64,9 @@
                         <p>O VOI Services não oferece serviço de redirecionamento. O VOI Services efetua envio apenas de produtos que foram adquiridos através da plataforma na compra de lotes.</p>
                         <p>O envio de produtos para a Amazon é oferecido sem cobrança de nenhuma taxa de redirecionamento. Para o usuário usufruir do redirecionamento grátis, os produtos constantes do lote adquirido deverão ser enviados em sua totalidade em um prazo de até 3 dias úteis. Caso o envio não tenha sido criado em até três dias úteis, serão apliadas as seguintes cobranças de envio:</p>
                         <p><strong>- Produto no estoque VOI até 10 dias: USD 1,29 por produto<br />
-                            - Produto no estoque VOI de 11 até 20 dias: USD 1,49 por produto<br>
-                            - Produto no estoque VOI de 21 até 30 dias: USD 1,99 por produto<br>
-                            - Apos 30 dias entrar em contato com o nosso suporte.</strong></p>
+                            - Produto no estoque VOI Services de 11 até 20 dias: USD 1,49 por produto<br>
+                            - Produto no estoque VOI Services de 21 até 30 dias: USD 1,99 por produto<br>
+                            - Após 30 dias entrar Services em contato com o nosso suporte.</strong></p>
                         <p>
                             &nbsp;</p>
 
@@ -78,7 +78,7 @@
                             <br />
                             <strong>8- Privacidade da Informa&ccedil;&atilde;o</strong></p>
                         <p>
-                            Toda informa&ccedil;&atilde;o ou Dado Pessoal do Usu&aacute;rio &eacute; armazenado em servidores ou meios magn&eacute;ticos de alta seguran&ccedil;a. Salvo com rela&ccedil;&atilde;o &agrave;s informa&ccedil;&otilde;es que s&atilde;o publicadas nos Sites, o VOI Services adotar&aacute; todas as medidas poss&iacute;veis para manter a confidencialidade e a seguran&ccedil;a das informa&ccedil;&otilde;es sigilosas.</p>
+                            Toda informa&ccedil;&atilde;o ou Dado Pessoal do Usu&aacute;rio &eacute; armazenado em servidores ou meios magn&eacute;ticos de alta seguran&ccedil;a. O VOI Services adotar&aacute; todas as medidas poss&iacute;veis para manter a confidencialidade e a seguran&ccedil;a das informa&ccedil;&otilde;es sigilosas.</p>
                         <p>
                             O Usu&aacute;rio expressamente autoriza que suas informa&ccedil;&otilde;es e dados pessoais sejam compartilhados pelo VOI Services com as demais empresas integrantes do grupo econ&ocirc;mico, parceiros comerciais, membros do Programa de Prote&ccedil;&atilde;o &agrave; Propriedade Intelectual, autoridades e pessoas f&iacute;sicas ou jur&iacute;dicas que aleguem ter sido lesadas por Usu&aacute;rios.</p>
                         <p>
@@ -86,7 +86,7 @@
                         <p>
                             <strong>9- San&ccedil;&otilde;es</strong></p>
                         <p>
-                            Sem preju&iacute;zo de outras medidas cab&iacute;veis, o VOI Services poder&aacute; advertir, suspender, tempor&aacute;ria ou definitivamente, a conta de um Usu&aacute;rio, a qualquer tempo, iniciando as a&ccedil;&otilde;es legais cab&iacute;veis e/ou suspendendo a presta&ccedil;&atilde;o de seus servi&ccedil;os se: a) o Usu&aacute;rio n&atilde;o cumprir qualquer dispositivo destes Termos e condi&ccedil;&otilde;es gerais de uso e demais pol&iacute;ticas do VOI Services; b) se descumprir com seus deveres de Usu&aacute;rio; c) se praticar atos fraudulentos ou dolosos; d) se n&atilde;o puder ser verificada a identidade do Usu&aacute;rio ou se qualquer informa&ccedil;&atilde;o fornecida por ele estiver incorreta; e) se o VOI Services verificar que produtos constantes do seu estoque n&atilde;o est&atilde;o em conformidade com a legalidade. Nos casos suspens&atilde;o da conta do usu&aacute;rio, todos os produtos constantes do estoque do usu&aacute;rio ser&atilde;o automaticamente cancelados e ser&atilde;o retornados ao mesmo. Caso o mesmo n&atilde;o indique o local para que seja retornado, os produtos ser&atilde;o tidos como abandonados.</p>
+                            Sem preju&iacute;zo de outras medidas cab&iacute;veis, o VOI Services poder&aacute; advertir, suspender, tempor&aacute;ria ou definitivamente, a conta de um Usu&aacute;rio, a qualquer tempo, iniciando as a&ccedil;&otilde;es legais cab&iacute;veis e/ou suspendendo a presta&ccedil;&atilde;o de seus servi&ccedil;os se: a) o Usu&aacute;rio n&atilde;o cumprir qualquer dispositivo destes Termos e condi&ccedil;&otilde;es gerais de uso e demais pol&iacute;ticas do VOI Services; b) se descumprir com seus deveres de Usu&aacute;rio; c) se praticar atos fraudulentos ou dolosos; d) se n&atilde;o puder ser verificada a identidade do Usu&aacute;rio ou se qualquer informa&ccedil;&atilde;o fornecida por ele estiver incorreta; Nos casos de suspens&atilde;o da conta do usu&aacute;rio, todos os produtos constantes do estoque do usu&aacute;rio ser&atilde;o automaticamente cancelados e ser&atilde;o retornados ao mesmo. Caso o mesmo n&atilde;o indique o local para que seja retornado, os produtos ser&atilde;o tidos como abandonados.</p>
                         <p>
                             O VOI Services reserva-se o direito de, a qualquer momento e a seu exclusivo crit&eacute;rio, solicitar o envio de documenta&ccedil;&atilde;o pessoal e/ou dos produtos. O n&atilde;o cumprimento pode acarretar a exclus&atilde;o do usu&aacute;rio e seus produtos.</p>
                         <p>
@@ -105,20 +105,19 @@
                             &nbsp;</p>
 
                         <p><strong>12- Do suporte</strong></p>
-                        <p>O suporte aos usuários é feito através do email suporte@voiservices.com. O VOI Services não se responsabiliza por solicitações feitas através de outro canal que não seja o email oficial de suporte aos clientes. </p>
+                        <p>O suporte aos usuários é feito através do email support@voiservices.com. O VOI Services não se responsabiliza por solicitações feitas através de outro canal que não seja o email oficial de suporte aos clientes. </p>
                         <p>O VOI Services apenas dará suporte a assuntos relacionados a plataforma, suas funcionalidades, bugs, dúvidas e reclamações. Qualquer outro tipo de assunto, não será atendido. </p>
                         <p>
                             &nbsp;</p>
-                        <p><strong>13- Das discrepancias de informação</strong></p>
-                        <p>É de responsabilidade dos assinantes a conferência dos dados informados em cada lote, tais como: Rank, Valor de Venda, Tarifa FBA, Lucros, etc. Os dados podem sofrer alteração desde a data que foram conferidos até a compra do respectivo lote por parte do assinante.</p>
+                        <p><strong>13- Das discrepâncias de informação</strong></p>
+                        <p>É de responsabilidade dos assinantes a conferência dos dados informados em cada lote, tais como: Rank, Valor de Venda, Tarifa FBA, Lucros, etc. Os dados podem sofrer alterações desde a data que foram conferidos até a compra do respectivo lote por parte do assinante.</p>
                         <p>O VOI Services não se responsabiliza por produtos adquiridos que estejam bloqueados pela Amazon. É  de responsabilidade do assinante verificar se os produtos constantes do lote são autorizados para venda.</p>
                         <p>O VOI Services não se responsabiliza pelo tempo de demora para que os produtos sejam vendidos na Amazon.</p>
                         <p>É imprescindível que o assinante, antes de finalizar a compra, verifique novamente todas as informações necessárias e informadas junto a Amazon.</p>
                         <p>
                             &nbsp;</p><p>
-                            <strong>15- Legisla&ccedil;&atilde;o aplic&aacute;vel e Foro de elei&ccedil;&atilde;o</strong></p>
-                        <p>
-                            Todos os itens destes Termos e condi&ccedil;&otilde;es gerais de uso s&atilde;o regidos pelas leis vigentes na Rep&uacute;blica Federativa do Brasil. Para todos os assuntos referentes &agrave; interpreta&ccedil;&atilde;o, ao cumprimento ou qualquer outro questionamento relacionado a estes Termos e condi&ccedil;&otilde;es gerais de uso, as partes concordam em se submeter ao Foro da Cidade do Rio de Janeiro-RJ, com exce&ccedil;&atilde;o de reclama&ccedil;&otilde;es apresentadas por Usu&aacute;rios que se enquadrem no conceito legal de consumidores, que poder&atilde;o submeter tais reclama&ccedil;&otilde;es ao foro de seu domic&iacute;lio.</p>
+                            <strong>14- Dos Problemas de conta suspens pela Amazon</strong></p>
+                        <p>O Voi Services não se responsabiliza por eventual bloqueio de conta Amazon dos usuários, mesmo que por motivo de compra dos produtos ofertados em nossa loja.</p>
                         <p>
                             <br />
                             <strong>Data de atualiza&ccedil;&atilde;o: </strong>15 de Janeiro de 2018</p>
